--- a/Product_recommendation-system/package.json
+++ b/Product_recommendation-system/package.json
@@ -1,14 +1,26 @@
 {
   "dependencies": {
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dayjs": "^1.11.18",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.2",
+    "mysql2": "^3.15.1",
+    "uuid": "^13.0.0",
+    "winston": "^3.18.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
